--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   flutter_bloc: ^8.1.3
   equatable: ^2.0.5
   path_provider: ^2.1.1
+  rxdart: ^0.27.7
 
 dev_dependencies:
   flutter_test:
