--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   equatable: ^2.0.5
   path_provider: ^2.1.1
   rxdart: ^0.27.7
+  go_router: ^14.0.0
 
 dev_dependencies:
   flutter_test:
